--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,11 @@
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
     <body>
-        <h1> aquie vamos a hacer un blogspot</h1>
-        <p> y este es el parrafo de inicio</p>
+        <div id="container">
+          <div id="post">
+             <h1> Este es el titulo atractivo e interesante del post</h1>
+             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer </p>
+          </div>
+        </div>  
     </body>>
 </html>
