finalizada la cabecera azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,10 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                hyperblog
+                <span id="tagline">tu blog de confianza
+                    
+                </span>>
                 cabecera
             </div>
              <div id="post">
