--- a/blogpost.html
+++ b/blogpost.html
@@ -7,15 +7,12 @@
         <div id="container">
             <div id="cabecera">
                 hyperblog
-                <span id="tagline">tu blog de confianza
-                    
-                </span>>
-                cabecera
+                <span id="tagline">tu blog de confianza</span>
             </div>
              <div id="post">
              <h1> Este es el titulo atractivo e interesante del post</h1>
-             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer </p>
+             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer</p>
           </div>
         </div>  
-    </body>>
+    </body>
 </html>
