--- a/blogpost.html
+++ b/blogpost.html
@@ -6,9 +6,10 @@
     <body>
         <div id="container">
           <div id="post">
-             <h1> Este es el titulo atractivo e interesante del post</h1>
-             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer </p>
+             <h1> SANA TU ALMA MANIFIESTA EN TU REALIDAD</h1>
+             <p> Al sanar nuestra alma, perdonandonos y aceptandonos tal cual somos lograremos transformar nuestra realidad</p>
+             <p> la sanacion hace parte del autoconoccimiento que nos permite transformarnos dia a dia </p>
           </div>
         </div>  
-    </body>>
+    </body>
 </html>
