cambio de contenido de blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,17 +1,18 @@
 <html>
     <head>
-        <title> el titulo del post</title>
+        <title> Astral Rhythym</title>
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                hyperblog
-                <span id="tagline">tu blog de confianza</span>
+                Astralblog
+                <span id="tagline">el blog de astralrhythym</span>
             </div>
              <div id="post">
-             <h1> Este es el titulo atractivo e interesante del post</h1>
-             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer</p>
+             <h1> sana tu alma manifiesta en tu realidad </h1>
+             <p> el autoconocimiento es la principal herramienta que tenemos para sanar nuestra alma, pues te aceptas y evolucionas</p>
+             <p> una de las herramientas de autoconocimiento mas usadas es la carta astral, ya que esta nos muestra nuestras tendencias de comprotamineto asi como talentos y habilidades</p>
           </div>
         </div>  
     </body>
