--- a/blogpost.html
+++ b/blogpost.html
@@ -1,18 +1,20 @@
 <html>
     <head>
-        <title> Astral Rhythym</title>
+        <title> Astral Rhythm</title>
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
     <body>
         <div id="container">
             <div id="cabecera">
                 Astralblog
-                <span id="tagline">el blog de astralrhythym</span>
+                <span id="tagline">el blog de Astral Rhythm</span>
             </div>
              <div id="post">
-             <h1> sana tu alma manifiesta en tu realidad </h1>
-             <p> el autoconocimiento es la principal herramienta que tenemos para sanar nuestra alma, pues te aceptas y evolucionas</p>
-             <p> una de las herramientas de autoconocimiento mas usadas es la carta astral, ya que esta nos muestra nuestras tendencias de comprotamineto asi como talentos y habilidades</p>
+             <h1> Sana tu alma manifiesta en tu realidad </h1>
+             <p> El autoconocimiento es la principal herramienta que tenemos para sanar nuestra alma, conocer y aceptar nuestra luz
+                 y nuestra sombra nos ayuda evolucionar</p>
+             <p> una de las herramientas de autoconocimiento mas usadas es la carta astral, ya que esta nos muestra nuestras 
+                tendencias de comprotamineto asi como talentos y habilidades</p>
           </div>
         </div>  
     </body>
