cambio contenido blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> el titulo del post</title>
+        <title> Astral Rhythm</title>
         <link rel="stylesheet" href="css/estilos.css" />
         </head>
     <body>
@@ -10,8 +10,9 @@
                 <span id="tagline">blog de astral rhythm</span>
             </div>
              <div id="post">
-             <h1> Este es el titulo atractivo e interesante del post</h1>
-             <p> y este es el parrafo de inicio donde vamos a explicar las cosas increibles que podemos hacer</p>
+             <h1> Sana tu alma manifiesta en tu realidad </h1>
+             <p> El autoconocimiento es la principal herramienta que tenemos para sanar nuestra alma, conocer y aceptar nuestra luz
+                y nuestra sombra nos ayuda evolucionar</p>
           </div>
         </div>  
     </body>
