color de fondo, logo cambio fuente, color y margen

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,17 +6,18 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/logo.png"/>
                 AstralBlog
-                <span id="tagline">blog de astral rhythm</span>
-                Astralblog
-                <span id="tagline">el blog de Astral Rhythm</span>
+                <span id="tagline">Blog de AstralRhythm</span>
             </div>
              <div id="post">
              <h1> Sana tu alma manifiesta en tu realidad </h1>
-             <p> El autoconocimiento es la principal herramienta que tenemos para sanar nuestra alma, conocer y aceptar nuestra luz
-                y nuestra sombra nos ayuda evolucionar</p>
-             <p> Una de las herramientas de autoconocimiento mas usadas es la carta astral, ya que esta nos muestra nuestras 
-                tendencias de comprotamineto asi como talentos y habilidades</p>
+             <p> El autoconocimiento es la principal herramienta 
+                que tenemos para sanar nuestra alma, conocer y 
+                aceptar nuestra luz y nuestra sombra nos ayuda evolucionar</p>
+             <p> Una de las herramientas de autoconocimiento 
+                mas usadas es la carta astral, ya que esta nos muestra nuestras 
+                tendencias de comprotamiento asi como talentos y habilidades</p>
           </div>
         </div>  
     </body>
