--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
              <p> Una de las herramientas de autoconocimiento mas usadas es la carta astral, ya que esta nos muestra nuestras 
                 tendencias de comprotamineto asi como talentos y habilidades</p>
           </div>
+          <div id="footer">
+          "Look up at the starts and not down at your feet" S.H. 
+          </div>
         </div>  
     </body>
 </html>
