cambio color  fondo y fuente del footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -19,7 +19,7 @@
                 tendencias de comprotamineto asi como talentos y habilidades</p>
           </div>
           <div id="footer">
-          "Look up at the starts and not down at your feet" S.H. 
+          "Remember to look up at the starts and not down at your feet" S.H. 
           </div>
         </div>  
     </body>
