tildes y typos arreglados en el post

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,19 +13,19 @@
              <div id="post">
              <h1> SANA TU ALMA Y MANIFIESTA EN TU REALIDAD </h1>
              <p> El autoconocimiento es un camino fundamental para sanar tu alma; conocer y 
-                aceptar tu luz y tu sombra te ayudará evolucionar; solo la 
+                aceptar tu luz y tu sombra te ayudará a evolucionar; solo la 
                 comprensión de estos te ayudaran a encontrar el equilibrio necesario entre tus energías
-                para así lograr adaptarte a la fluctuante experiencia de tu paso por la tierra y manfestar otra realidad. </p>
+                para así lograr adaptarte a la fluctuante experiencia de tu paso por la tierra y manifestar otra realidad. </p>
              <p> Una de las herramientas de autoconocimiento 
                 mas usadas es la Astrología y con esta la Carta Natal, única para cada ser, no por nada es conocida
-                como la huella astral, nuetro mapa de navegación en la tierra pues esta puede mostrate tus
+                como la huella astral, nuestro mapa de navegación en la tierra pues esta puede mostrarte tus
                 tendencias de comportamiento así como talentos y habilidades</p>
             <p>En Astrología popular se conoce el signo solar que es el signo de nuestra fecha de nacimiento, el horóscopo 
-                que sale en los periódicos y ahora en redes sociales, sin embargo La Carta Astral va mas allá de esto 
-                ¿sabías que tienes todos los signos del zociado en tu Carta Astral y que cada uno de ellos rige un área de tu vida?
-                pues bien esta es la puerta de entrada al autoconcimiento </p>
-            <p>¿Te gustaría aprender acerca de tu Carta Astral y su interpretacíon?</p>
-            <p>Encuentranos en IG cómo @astral_rhythm8  y síguenos ... </p>
+                que sale en los periódicos y ahora en redes sociales, sin embargo, La Carta Astral va mas allá de esto 
+                ¿sabías que tienes todos los signos del zodiac en tu Carta Astral y que cada uno de ellos rige un área de tu vida?
+                pues bien esta es la puerta de entrada al autoconocimiento </p>
+            <p>¿Te gustaría aprender acerca de tu Carta Astral y su interpretación?</p>
+            <p>Encúentranos en IG cómo @astral_rhythm8  y síguenos ... </p>
           </div>
           <div id="footer">
           "Remember to look up at the starts and not down at your feet" S.H. 
