agregue git ignore

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,17 +5,18 @@
         </HEAD>
     <body>
         <div id="container">
-            <div id="cabecera">
+            <div id="cabecera"> 
                 <img id="logo" src="imagenes/logo.png" />
                 AstralBlog
                 <span id="tagline">Blog de AstralRhythm</span>
             </div>
-             <div id="post">
+             <p id="post">
              <h1> SANA TU ALMA Y MANIFIESTA EN TU REALIDAD </h1>
              <p> El autoconocimiento es un camino fundamental para sanar tu alma; conocer y 
                 aceptar tu luz y tu sombra te ayudará evolucionar; solo la 
                 comprensión de estos te ayudaran a encontrar el equilibrio necesario entre tus energías
                 para así lograr adaptarte a la fluctuante experiencia de tu paso por la tierra y manfestar otra realidad. </p>
+             <p> <img src="imagenes/333.jpg" width="50%"/></p>
              <p> Una de las herramientas de autoconocimiento 
                 mas usadas es la Astrología y con esta la Carta Natal, única para cada ser, no por nada es conocida
                 como la huella astral, nuetro mapa de navegación en la tierra pues esta puede mostrate tus
