--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
                 aceptar tu luz y tu sombra te ayudará evolucionar; solo la 
                 comprensión de estos te ayudaran a encontrar el equilibrio necesario entre tus energías
                 para así lograr adaptarte a la fluctuante experiencia de tu paso por la tierra y manfestar otra realidad. </p>
-             <p> <img src="imagenes/333.jpg" width="50%"/></p>
+             <center> <img src="imagenes/2276.jpg" width="50%"/></center></p>
              <p> Una de las herramientas de autoconocimiento 
                 mas usadas es la Astrología y con esta la Carta Natal, única para cada ser, no por nada es conocida
                 como la huella astral, nuetro mapa de navegación en la tierra pues esta puede mostrate tus
